--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urlshortenernext",
+  "name": "url-shortener",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.3.4",
     "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
+    "eslint-config-next": "13.2.3",
+    "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "redis": "^4.6.5",
-    "shortid": "^2.2.16"
+    "redis": "^4.6.5"
   }
 }
