--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -14,6 +14,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "redis": "^4.6.5"
+    "redis": "^4.6.5",
+    "swr": "^2.0.4"
   }
 }
